k8s-manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backtienda
spec:
  selector:
    matchLabels:
      name: backtienda
  template:
    metadata:
      labels:
        name: backtienda
    spec:
      containers:
        - image: oth4r/backtienda
          name: backtienda
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
