k8s-manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backtienda
  labels:
    name: backtienda
spec:
  ports:
  - port: 4201
    name: http
  selector:
    name: backtienda
