k8s-manifest/ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backtienda
  #annotations:
  #  nginx.ingress.kubernetes.io/rewrite-target: /
  # cambiar 20.72.99.142 por el IP de tu Ingress 
spec:
  ingressClassName: nginx
  rules:
  - host: backtienda.20.121.76.163.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: backtienda
            port:
              number: 80
